fixed document overflow to the right on home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ header {
     width: 100%;
     font-family: Anton;
     margin-top: 20px;
+    overflow: hidden;
 }
 
 header a {
@@ -78,7 +79,6 @@ body {
 #main-image {
     text-align: center;
     height: 680px;
-    width: 100%;
     overflow: hidden;
 }
 
@@ -88,7 +88,6 @@ body {
 
 #description {
     text-align: center;
-    width: 100%;
     padding: 20px 50px;
     font-size: 25px;
 }
@@ -104,7 +103,6 @@ body {
 
 #times {
     text-align: center;
-    width: 100%;
     margin: 20px;
     font-size: 25px;
 }
